# Husvert

./: .gitignore  MOTIVATION-STRATEGY.md  README.md  roadmap.md
src/esp32/blink/: .gitignore  README.md
src/esp32/blink/main/: CMakeLists.txt  main.c  mqtt_app.c  mqtt_app.h  mqtt_config.h  sensor_app.c  sensor_app.h  wifi_app.c  wifi_app.h  wifi_config.h.template
